# pdf2audio

./: .gitignore  README.md  config.yaml  pdf2audio_coqui.py  pdf2audio_google.py  pdf2audio_llm.py  pdf2audio_summarizer.py  pyproject.toml  requirements.txt  voice_test_coqui.py  voice_test_google.py
docs/: architecture.md  voices.md
src/: __main__.py  audio.py  config.py  editor.py  extractor.py  logger.py  merge.py  preview.py
