[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf2audio"
version = "0.1.0"
description = "A simple, open-source tool that converts PDFs into audiobooks for free"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "janakhpon", email = "janakhpon@example.com"}
]
keywords = ["pdf", "audio", "audiobook", "tts", "text-to-speech"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=1.9.0",
    "transformers>=4.20.0",
    "TTS>=0.8.0",
    "PyPDF2>=3.0.0",
    "psutil>=5.8.0",
    "tqdm>=4.62.0",
    "pydub>=0.25.1",
    "gtts>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
include = [
    "*.py",
    "LICENSE",
    "README.md",
    "summarizer_config.json",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
